<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    android:background="@color/backgroundcolor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/menucolor"
        android:gravity="center"
        android:text="@string/title_3"
        android:textSize="27sp"
        android:textAlignment="center"
        android:textColor="@color/maintitle"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />




    <Button
        android:id="@+id/butMenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTitle"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ScrollView
        android:id="@+id/explain_extend_sv"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:scrollbarDefaultDelayBeforeFade="500000"
        android:scrollbarSize="10dp"
        android:scrollbarFadeDuration="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/backgroundcolor"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/explain_extend_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="52dp"
                    android:layout_marginTop="100dp"
                    android:layout_weight="0"
                    android:background="@drawable/minus_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="100dp"
                    android:text="@string/effect_2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn"
                    app:layout_constraintHorizontal_bias="0.381"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/extended"
                android:layout_width="310dp"
                android:layout_height="287dp"
                android:background="@drawable/but_around"
                android:layout_marginStart="40dp"
                android:text="@string/extended"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="InvalidId" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:background="@drawable/plus_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.661"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.619"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="64dp"
                    android:text="@string/component2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>