<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    android:background="@color/backgroundcolor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/menucolor"
        android:gravity="center"
        android:text="@string/title_3"
        android:textSize="27sp"
        android:textAlignment="center"
        android:textColor="@color/maintitle"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/butMenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTitle"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ScrollView
        android:id="@+id/explain_extend_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarDefaultDelayBeforeFade="500000"
        android:scrollbarSize="10dp"
        android:layout_marginTop="60dp"
        android:scrollbarFadeDuration="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        android:background="@color/backgroundcolor"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/explain_extend_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="55dp"
                    android:layout_marginEnd="52dp"
                    android:layout_marginTop="100dp"
                    android:layout_weight="0"
                    android:text="@string/explain_effect"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:background="@drawable/minus_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.661"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.619"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"  />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/component_extend_ll"
                android:layout_width="300dp"
                android:layout_height="400dp"
                android:layout_marginStart="55dp"
                android:orientation="vertical"
                android:top="1dp"
                android:bottom="1dp"
                android:left="1dp"
                android:right="1dp"
                android:background="@drawable/but_around"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/component_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/component_1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.151"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.059"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Button
                        android:id="@+id/component_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:text="@string/component_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.976"
                        app:layout_constraintStart_toEndOf="@+id/component_1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.059"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Button
                        android:id="@+id/component_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/component_3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.238" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="55dp"
                    android:text="@string/component2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />



                <Button
                    android:id="@+id/btn2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:background="@drawable/plus_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.661"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.619"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>